--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@heroui/button": "^2.2.16",
+		"@heroui/react": "^2.7.5",
+		"autoprefixer": "^10.4.21",
 		"firebase": "^11.4.0",
+		"framer-motion": "^12.5.0",
 		"next": "15.2.3",
 		"prettier": "^3.5.3",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-icons": "^5.5.0"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
@@ -24,7 +29,7 @@
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.2.3",
-		"tailwindcss": "^4",
+		"tailwindcss": "^3.4.17",
 		"typescript": "^5"
 	}
 }
