Implémentation succinte d'un player youtube et twitch

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
 		"**/*.tsx",
 		".next/types/**/*.ts",
 		"firebase.js"
-	],
+, "app/players/youtube-player.jsx"	],
 	"exclude": [
 		"node_modules"
 	]
