--- a/package.json
+++ b/package.json
@@ -7,31 +7,31 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"format": "prettier --write .",
-		"test": "jest"
+		"format": "prettier --write ."
 	},
 	"dependencies": {
-		"@babel/preset-react": "^7.26.3",
 		"@heroui/button": "^2.2.16",
 		"@heroui/react": "^2.7.5",
+		"@radix-ui/react-label": "^2.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
 		"autoprefixer": "^10.4.21",
-		"babel-jest": "^29.7.0",
-		"firebase": "^11.4.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"firebase": "^11.5.0",
 		"framer-motion": "^12.5.0",
-		"next": "15.2.3",
+		"lucide-react": "^0.483.0",
+		"next": "^15.2.3",
 		"prettier": "^3.5.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-icons": "^5.5.0",
-		"react-player": "^2.16.0"
+		"tailwind-merge": "^3.0.2",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
-		"@testing-library/dom": "^10.4.0",
-		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/react": "^16.2.0",
-		"@types/node": "^20",
+		"@types/node": "^20.17.28",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
@@ -40,6 +40,6 @@
 		"jest-environment-jsdom": "^29.7.0",
 		"tailwindcss": "^3.4.17",
 		"ts-node": "^10.9.2",
-		"typescript": "^5"
+		"typescript": "^5.8.2"
 	}
 }
