--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,46 @@
 {
 	"compilerOptions": {
-		"target": "ES2017",
-		"lib": ["dom", "dom.iterable", "esnext"],
-		"allowJs": true,
-		"skipLibCheck": true,
-		"strict": true,
-		"noEmit": true,
-		"esModuleInterop": true,
-		"module": "esnext",
-		"moduleResolution": "bundler",
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"jsx": "preserve",
-		"incremental": true,
-		"plugins": [
-			{
-				"name": "next"
-			}
-		],
-		"paths": {
-			"@/*": ["./*"],
-			"@/styles/*": ["./app/styles/*"]
+	  "target": "ES2017",
+	  "lib": [
+		"dom",
+		"dom.iterable",
+		"esnext"
+	  ],
+	  "allowJs": true,
+	  "skipLibCheck": true,
+	  "strict": true,
+	  "noEmit": true,
+	  "esModuleInterop": true,
+	  "module": "esnext",
+	  "moduleResolution": "bundler",
+	  "resolveJsonModule": true,
+	  "isolatedModules": true,
+	  "jsx": "preserve",
+	  "incremental": true,
+	  "types": ["jest", "node"],  // <-- Ajoutez cette ligne
+	 
+	  "plugins": [
+		{
+		  "name": "next"
 		}
+	  ],
+	  "paths": {
+		"@/*": [
+		  "./*"
+		],
+		"@/styles/*": [
+		  "./app/styles/*"
+		]
+	  }
 	},
 	"include": [
-		"next-env.d.ts",
-		"**/*.ts",
-		"**/*.tsx",
-		".next/types/**/*.ts",
-		"firebase.js",
-		"app/players/youtube-player.jsx",
-		"tailwind.config.js"
-	],
-	"exclude": ["node_modules"]
-}
+	  "next-env.d.ts",
+	  "**/*.ts",
+	  "**/*.tsx",
+	  ".next/types/**/*.ts",
+	  "firebase.js"
+, "__tests__/roomService.test.jsx"	],
+	"exclude": [
+	  "node_modules"
+	]
+  }
