--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"babel-jest": "^29.7.0",
 		"firebase": "^11.4.0",
 		"framer-motion": "^12.5.0",
+		"lucide-react": "^0.503.0",
 		"next": "15.2.3",
 		"prettier": "^3.5.3",
 		"react": "^19.0.0",
