--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
 		"firebase.js",
 		"app/players/youtube-player.jsx",
 		"tailwind.config.js"
-	],
+, "app/players/page.jsx"	],
 	"exclude": ["node_modules"]
 }
