--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@babel/preset-react": "^7.26.3",
+		"@heroicons/react": "^2.2.0",
 		"@heroui/button": "^2.2.16",
 		"@heroui/react": "^2.7.5",
 		"autoprefixer": "^10.4.21",
