--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
 		"@heroicons/react": "^2.2.0",
 		"@heroui/button": "^2.2.16",
 		"@heroui/react": "^2.7.5",
+		"@radix-ui/react-dropdown-menu": "^2.1.12",
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@theme-toggles/react": "^4.1.0",
 		"autoprefixer": "^10.4.21",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
