--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,9 @@
 		"next-env.d.ts",
 		"**/*.ts",
 		"**/*.tsx",
+		"types/**/*.ts", 
+		"**/*.ts", 
+		"**/*.tsx",
 		".next/types/**/*.ts",
 		"app/firebase.js",
 		"app/players/youtube-player.jsx",
